--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Moesia
+Theme Name: Moesia-HFM
 Theme URI: http://athemes.com/theme/moesia
 Author: aThemes
 Author URI: http://athemes.com
-Description: Moesia is the business theme you need in order to build your presence on the Internet. Choose from eleven predefined blocks and build the homepage that best suits your company. Each of the homepage blocks can have a parallax background image and its own set of colors. Moesia also features a selection of Google Fonts, two types of layouts for the blog page, cool animations and effects, a parallax header and much more.
+Description: Dit thema is bewerkt voor de Hoornsche Foodmarket door Jonne Bakker (page202.nl)
 Version: 1.21
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -20,11 +20,23 @@ Moesia is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic,
 
 --------------------------------------------------------------*/
 
+@font-face {
+    font-family: 'langdonregular';
+    src: url('fonts/langdon/langdon-webfont.eot');
+    src: url('fonts/langdon/langdon-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/langdon/langdon-webfont.woff2') format('woff2'),
+         url('fonts/langdon/langdon-webfont.woff') format('woff'),
+         url('fonts/langdon/langdon-webfont.ttf') format('truetype'),
+         url('fonts/langdon/langdon-webfont.svg#langdonregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Lora', serif;
 	color: #aaa;
 	background-color: #f5f5f5;
 	line-height: 1.5;
+	text-align: center;
 	word-break: break-word;
 	-webkit-font-smoothing: antialiased;
 }
@@ -49,22 +61,31 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'langdonregular', serif;
 	color: #444;
 	font-weight: 700;
+	text-transform: uppercase;
 }
 blockquote {
 	border: 0;
+	margin: 40px 0;
 }
+a{
+	color:#b33625;
+}
+a:hover{
+	color:#b33625;
+}
+/* JB: no blockquote quote 
 blockquote:before{
-	float: left;
-	margin-right: 10px;
+	margin-right: 20px;
 	font-family: FontAwesome;
 	font-size: 30px;
 	line-height: 1;
 	content: '\f10d';
-	color: #ff6b53;
+	color: #ff6b53 !important;
 }
+*/
 cite {
 	font-style: italic;
 	padding: 0 20px;
@@ -75,36 +96,33 @@ cite {
 code {
 	white-space: pre-wrap;
 }
-::selection {
-	background-color: #ff6b53;
-	color: #fff;
+::selection{
+	background-color: rgba(255,206,6,0.3) !important;
 }
 input,
 textarea {
 	padding: 15px;
 	max-width: 100%;
-	border: 2px solid #444;
+	border: 3px double #d9d6d2;
 }
 button,
 html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-    background-color: #ff6b53;
-    padding: 10px 20px;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 16px;
-    text-transform: uppercase;
+    background-color: #dc4128;
+    padding: 9px 18px;
+    font-family: 'Lora', serif;
+    font-size: 17px;
     color: #fff;
-    box-shadow: 0 5px 0 #C2503D;
+    box-shadow: 0 5px 0 #b33625;
     border-radius: 5px;
-    font-weight: 700;
     border: 0;
 }
 /* Tables - extracted from Bootstrap and changed so it applies by default */
 table {
 	width: 100%;
 	margin-bottom: 20px;
-	border: 1px solid #dddddd;
+	border: 1px solid #d9d6d2;
 }
 th {
 	background-color: #F8F8F8;
@@ -125,7 +143,7 @@ table > tfoot > tr > th,
 table > thead > tr > td,
 table > tbody > tr > td,
 table > tfoot > tr > td {
-  border: 1px solid #dddddd;
+  border: 1px solid #d9d6d2;
 }
 /*--------------------------------------------------------------
 Menus
@@ -133,10 +151,11 @@ Menus
 .main-navigation {
 	display: block;
 	float: left;
+	padding-right: 0;
 }
 .main-navigation ul {
 	list-style: none;
-	margin: 0;
+	margin: 2px 0;
 	padding-left: 0;
 	float: right;
 }
@@ -145,7 +164,9 @@ Menus
 	position: relative;
 	padding: 40px 10px;
 	text-transform: uppercase;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'langdonregular', sans-serif !important;
+	font-size: 24px !important;
+	letter-spacing: 1px;
 }
 .main-navigation a {
 	display: block;
@@ -155,7 +176,7 @@ Menus
 	transition: color 0.3s;
 }
 .main-navigation a:hover {
-	color: #ff6b53;
+	color: #fff;
 }
 .main-navigation ul ul {
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
@@ -179,9 +200,10 @@ Menus
 	text-transform: none;
 	font-family: 'Roboto', sans-serif;
 	font-size: 13px;
-	border-bottom: 1px solid #ebebeb;
+	border-bottom: 1px solid #d9d6d2;
 }
 .main-navigation li:hover > a {
+	color:#fff;
 }
 .main-navigation ul ul :hover > a {
 }
@@ -269,7 +291,7 @@ Menus
 	height: 50px;
 }
 .search-close {
-	display: inline-block;
+	display:none;
 	height: 22px;
 	width: 22px;
 	border-radius: 50%;
@@ -293,10 +315,10 @@ Post and page navigation
 .paging-navigation .nav-next {
 	max-width: 50%;
 	padding: 15px;
-	background-color: #ff6b53;
+	background-color: #f4f2ed;
 	font-weight: 700;
 	text-transform: uppercase;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'langdonregular', sans-serif;
 	box-shadow: 0 0 1px #adadad;
 	-webkit-transition: background-color 0.4s;
 	transition: background-color 0.4s;
@@ -325,7 +347,7 @@ Post and page navigation
 .post-navigation .nav-next:hover,
 .paging-navigation .nav-previous:hover,
 .paging-navigation .nav-next:hover {
-	background-color: #222;
+	background-color: #b33625;
 }
 #comment-nav-above,
 #comment-nav-below {
@@ -407,7 +429,7 @@ Widgets
 .widgettitle {
 	margin: 0 0 15px;
 	padding-bottom: 15px;
-	border-bottom: 4px double #ebebeb;
+	border-bottom: 3px double #d9d6d2;
 }
 .footer-widget-area .widget ul,
 .widget-area .widget ul {
@@ -466,7 +488,7 @@ Widgets
 .widget .list-group-item {
 	border-left: none;
 	border-right: none;
-	border-top: 1px solid #ebebeb;
+	border-top: 1px solid #d9d6d2;
 	border-bottom: none;
 }
 .widget .list-group-item:first-child {
@@ -545,23 +567,34 @@ Widgets
 /* Footer widget area */
 .footer-widget-area {
 	background-color: #222;
-	padding: 60px 0;
+	padding: 40px 0;
 }
 .footer-widget-area .widget-title {
-	border-bottom: 4px double #3A3A3A;
+	border-bottom: 3px double #d9d6d2;
 	color: #E4E4E4;
 }
 .footer-widget-area .list-group-item {
-	border-top: 1px solid #3A3A3A;
+	border-top: 1px solid #d9d6d2;
 }
 .footer-widget-area .contact-address span,
 .footer-widget-area .contact-phone span,
 .footer-widget-area .contact-email span {
 	color: #fff;
 }
+.footer-widget-area .textwidget{
+	color:#fff;
+	font-size: 26px;
+	font-style: italic;
+	text-align: center;
+}
 /*--------------------------------------------------------------
 Posts and pages
 --------------------------------------------------------------*/
+.welcome-desc{
+	font-family: 'langdonregular', sans-serif;
+	text-transform: uppercase;
+	text-shadow: 0 0 7px rgba(0,0,0,0.3) !important;
+}
 .sticky {
 	background-color: #f5f5f5;
 }
@@ -588,8 +621,11 @@ Posts and pages
 	margin: 0 0 1.5em;
 }
 .entry-header {
+	margin-bottom: 0;
+	border-bottom: 3px double #d9d6d2;
+}
+.post-content .entry-header, .post .entry-header{
 	margin-bottom: 15px;
-	border-bottom: 4px double #ebebeb;
 }
 .entry-title,
 .entry-meta {
@@ -613,7 +649,8 @@ Posts and pages
 	color: #ff6b53;
 }
 .entry-thumb img {
-	border: 4px double #ebebeb;
+	border: 3px double #d9d6d2;
+	border-bottom: none;
 	-webkit-transition: all 0.3s;
 	transition: all 0.3s;
 }
@@ -638,13 +675,13 @@ Posts and pages
 .entry-footer {
 	margin-top: 15px;
 	padding-top: 15px;
-	border-top: 4px double #ebebeb;
+	border-top: 3px double #d9d6d2;
 	clear: both;
 }
 .hentry .post-content,
 .single .hentry,
 .page .hentry {
-	border: 4px double #ebebeb;
+	border: 3px double #d9d6d2;
 	padding: 30px;
 	background-color: #fff;	
 }
@@ -653,7 +690,7 @@ Posts and pages
 	margin-bottom: 60px;
 	padding: 30px;
 	background-color: #fff;
-	border: 4px double #ebebeb;
+	border: 3px double #d9d6d2;
 }
 .author-bio .avatar {
 	display: block;
@@ -661,7 +698,7 @@ Posts and pages
 }
 .author-name {
 	padding-bottom: 15px;
-	border-bottom: 4px double #ebebeb;
+	border-bottom: 3px double #d9d6d2;
 }
 .author-social {
 	padding-top: 15px;
@@ -738,7 +775,7 @@ Comments
 .comment-body {
 	padding: 15px;
 	margin-bottom: 20px;
-	border: 4px double #ebebeb;
+	border: 3px double #d9d6d2;
 	background-color: #fff;
 }
 .reply {
@@ -747,7 +784,7 @@ Comments
 .comment-reply-link {
 	padding: 5px;
 	background-color: #fff;
-	border: 4px double #ebebeb;
+	border: 3px double #d9d6d2;
 	font-size: 12px;
 	-webkit-transition: all 0.4s;
 	transition: all 0.4s;	
@@ -777,7 +814,7 @@ textarea#comment {
 	width: 100%;
 	max-width: 100%;
 	padding: 10px;
-	border: 4px double #ebebeb;
+	border: 3px double #d9d6d2;
 }
 .comment-form-author:before,
 .comment-form-email:before,
@@ -848,6 +885,9 @@ img {
 	max-width: 100%;
 	height: auto;
 }
+img.header-image{
+	width:100%;
+}
 /*--------------------------------------------------------------
 Captions
 --------------------------------------------------------------*/
@@ -910,7 +950,7 @@ Structure
 --------------------------------------------------------------*/
 .site-branding {
 	float: left;
-	padding: 40px 15px;
+	padding: 40px 15px 40px 0;
 }
 .site-logo {
 	max-width: 100px;
@@ -920,9 +960,17 @@ Structure
 .site-title {
 	margin: 0;
 	text-transform: uppercase;
+	text-align: left;
 	font-weight: 700;
-	padding-bottom: 10px;
+	font-size:45px;
+	line-height:0.95;
 }
+@media screen and (-webkit-min-device-pixel-ratio: 1.5), screen and (-moz-min-device-pixel-ratio: 1.5), screen and (min-device-pixel-ratio: 1.5) {
+	.site-title {
+		text-transform: lowercase;
+	}
+}
+
 .site-title a {
 	color: #fff;
 	text-decoration: none;
@@ -948,12 +996,12 @@ Structure
 	float: right;
 	background-color: #fff;
 	padding: 30px;
-	border: 4px double #ebebeb;
+	border: 3px double #d9d6d2;
 	margin-bottom: 30px;
 }
 .site-footer {
 	padding: 30px 0;
-	border-top: 1px solid #3A3A3A;
+	border-top: 1px solid #d9d6d2;
 	background-color: #222;	
 }
 .site-footer a {
@@ -988,12 +1036,27 @@ Front page widgets
 --------------------------------------------------------------*/
 /* General */
 .panel-grid-cell section {
-	padding: 80px 0;
+	padding: 50px 0;
 	z-index: 999;
 }
+.panel-grid-cell div.panel{
+	padding: 50px 0;
+}
+.panel-grid-cell section.blockquote-area, .panel-grid-cell div.widget_sow-post-carousel{
+	padding-bottom:0px;
+}
+.panel-grid-cell div.widget_sow-google-map{
+	padding:0;
+}
 .panel-grid {
-	border-bottom: 1px solid #ebebeb;
-	background-color: #fff;
+	border-bottom: 3px double #d9d6d2;
+	background-color: #f4f2ed;
+}
+.panel-grid:last-of-type{
+	border-bottom: none;
+}
+article .panel-grid{
+	background-color:#fff;
 }
 section .widget-title {
 	position: relative;
@@ -1001,7 +1064,7 @@ section .widget-title {
 	padding: 0;
 	border-bottom: 0;
 	text-align: center;
-	font-size: 56px;
+	font-size: 50px;
 	text-transform: uppercase;
 }
 section .widget-title:after {
@@ -1024,6 +1087,9 @@ section .widget-title:after {
 	font-size: 24px;	
 	text-align: center;
 	text-transform: uppercase;
+}
+.latest-news-area .entry-summary{
+	text-align: center;
 }
 .service:nth-of-type(3n+1),
 .employee:nth-of-type(3n+1),
@@ -1066,8 +1132,8 @@ section .widget-title:after {
 .employee-desc {
 	margin-bottom: 15px;
 	padding: 10px 0;
-	border-top: 1px solid #ebebeb;
-	border-bottom: 1px solid #ebebeb;
+	border-top: 3px double #d9d6d2;
+	border-bottom: 3px double #d9d6d2;
 }
 .employee-social {
 	text-align: center;
@@ -1206,6 +1272,11 @@ section .widget-title:after {
 .blockquote-area .widget-title {
 	margin-bottom: 90px;
 }
+blockquote{
+	font-size: 22px;
+	font-style: italic;
+	text-align: center;
+}
 /* Skills */
 .skill-bar {
 	height: 25px;
@@ -1225,10 +1296,10 @@ section .widget-title:after {
 	background-color: #ff6b53;
 }
 .skills-desc {
-	border-right: 1px solid #ebebeb;
+	border-right: 1px solid #d9d6d2;
 }
 .skills-list {
-	border-left: 1px solid #ebebeb;
+	border-left: 1px solid #d9d6d2;
 	margin-left: -1px;
 }
 .skills-area .col-md-2 {
@@ -1241,7 +1312,7 @@ section .widget-title:after {
 }
 .fact {
 	font-size: 50px;
-	border-bottom: 1px solid #ebebeb;
+	border-bottom: 1px solid #d9d6d2;
 	font-family: 'Roboto Condensed', sans-serif;
 	color: #ff6b53;
 }
@@ -1256,7 +1327,7 @@ section .widget-title:after {
 	position: relative;
 	padding: 30px;
 	border-radius: 20px;
-	background-color: #f5f5f5;
+	background-color: #fff;
 }
 .testimonial-body:after {
 	position: absolute;
@@ -1286,12 +1357,15 @@ section .widget-title:after {
 	font-style: italic;
 }
 /* Projects */
+.panel-grid-cell .projects-area{
+	background-color: #fff !important;
+}
 .project-image {
 	position: relative;
-	background-color: #ff6b53;
+	background-color: #fff;
 }
 .project {
-	margin-bottom: 30px;
+	margin-bottom: 0;
 }
 .link-icon,
 .pp-icon {
@@ -1313,12 +1387,13 @@ section .widget-title:after {
 	left: 0;
 }
 .pp-icon {
+	display:none;
 	right: 0;
 }
 .link-icon .fa {
 	position: relative;
 	top: 15px;
-	left: 15px;
+	left: 0;
 }
 .pp-icon .fa {
 	position: relative;
@@ -1350,9 +1425,12 @@ section .widget-title:after {
 }
 .action-text {
 	margin-bottom: 60px;
-	font-size: 30px;
+	font-family: 'langdonregular', sans-serif;
+	font-size: 44px;
+	color:#fff;
 	text-align: center;
 	text-transform: uppercase;
+	text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 .call-to-action:active {
 	top: 3px;
@@ -1360,24 +1438,15 @@ section .widget-title:after {
 /* Latest News */
 .all-news {
 	display: table;
-	margin: 50px auto 0;
+	margin: 20px auto 0;
 	padding: 10px;
-	border: 1px solid #444;
 	text-align: center;
-	text-transform: uppercase;
-	font-weight: 700;
-	font-weight: 'Roboto Condensed', sans-serif;
-	font-size: 16px;
+	color: #b33625;
 	-webkit-transition: all 0.3s;
 	transition: all 0.3s;
 }
-.all-news,
 .all-news:hover {
-	color: #444;
-	text-decoration: none;
-}
-.all-news:hover {
-	box-shadow: 0 0 2px #444;
+	
 }
 
 /*--------------------------------------------------------------
@@ -1396,7 +1465,6 @@ Header
 	width: 100%;
 	z-index: 99999;
 	background-color: #222;
-	opacity: 0.9;	
 }
 .overlay {
 	background: url('images/pattern.png');
@@ -1426,7 +1494,7 @@ Header
 		padding: 5px;
 	}
 	.is-sticky .site-branding {
-		padding: 20px 15px;
+		padding: 20px 15px 20px 0;
 		-webkit-transition: all 0.3s;
 		transition: all 0.3s;		
 	}
@@ -1447,6 +1515,11 @@ Welcome area
 	text-align: center;
 	width: 100%;
 }
+@media only screen and (max-width:1024px){
+	.welcome-info{
+		top: 60px;
+	}
+}
 .welcome-title {
 	font-size: 80px;
 	color: #fff;
@@ -1458,9 +1531,14 @@ Welcome area
 	line-height: 1.2;
 }
 .welcome-logo {
-	max-width: 200px;
+	max-width: 420px;
 	display: block;
-	margin: 0 auto 30px;
+	margin: 0 auto;
+}
+@media (max-width:480px){
+	.welcome-logo{
+		max-width:260px !important;
+	}
 }
 .welcome-desc {
 	font-size: 28px;
@@ -1468,29 +1546,43 @@ Welcome area
 	text-align: center;		
 	color: #D8D8D8;
 	text-shadow: 0 0 2px #222, 0 0 2px #222;
-	margin-bottom: 30px;
+	margin-bottom: 15px;
 }
 .welcome-button {
 	width: 100%;
 	text-align: center;
 	position: relative;	
 }
+.welcome-arrow{
+	font-family: 'Fontawesome';
+	margin-top: 16px;
+	font-size: 40px;
+	color: #fff;
+	text-shadow: 0 0 7px rgba(0,0,0,0.3);
+}
+.welcome-arrow a{
+	color:#fff;
+}
+.welcome-arrow a:hover, .welcome-arrow a:focus, .welcome-arrow a:active, .welcome-arrow a:visited{
+	color: #fff;
+	text-decoration: none;
+}
 .welcome-button,
 .call-to-action {
-    background-color: #ff6b53;
-    padding: 10px 20px;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 16px;
-    text-transform: uppercase;
+    background-color: #dc4128;
+    padding: 9px 18px;
+    font-family: 'Lora', serif;
+    font-size: 17px;
+    letter-spacing: 1px;
     color: #fff;
-    box-shadow: 0 5px 0 #C2503D;
+    box-shadow: 0 5px 0 #b33625 !important;
     border-radius: 5px;
     font-weight: 700;
 }
 .welcome-button:active,
 .call-to-action:active {
 	top: 3px;
-	box-shadow: 0 2px 0 #C2503D;
+	box-shadow: 0 2px 0 #b33625;
 }
 .welcome-button:hover,
 .welcome-button:visited,
@@ -1520,7 +1612,7 @@ Welcome area
 }
 .panel.widget {
 	margin: 0 auto;
-	padding: 80px 30px;
+	padding: 0;
 }
 .fullwidth {
 	width: 100%;
@@ -1529,6 +1621,22 @@ Welcome area
 /*--------------------------------------------------------------
 Carousel
 --------------------------------------------------------------*/
+.clients-area .carousel.slider > div{
+	float:left;
+	margin-right:30px;
+}
+.clients-area .widget-title, .projects-area .widget-title{
+	margin-bottom: 20px;
+}
+section.clients-area{
+	padding-bottom: 20px;
+} 
+.sow-carousel-title > h3{
+	width:100%;
+}
+.sow-carousel-items h3{
+	display:none;
+}
 .slick-slider:hover {
 	cursor: move;
 }
@@ -1627,6 +1735,17 @@ Center Services and Employees
 /*--------------------------------------------------------------
 Responsive
 --------------------------------------------------------------*/
+@media only screen and (max-width:700px){
+	header#mashead{
+		display:none;
+	}
+	.header-image{
+		display:none;
+	}
+	.welcome-info{
+		display:none;
+	}
+}
 @media only screen and (min-width: 1025px) {	
 	.header-image {
 		display: none;
@@ -1706,7 +1825,7 @@ Responsive
 		padding: 0;
 	}
 	.entry-title {
-		font-size: 25px;
+		font-size: 30px;
 	}
 	.welcome-desc,
 	.welcome-button {
@@ -1714,8 +1833,6 @@ Responsive
 	}
 	.panel-grid-cell section,   
 	.panel.widget {
-		padding-top: 40px;
-		padding-bottom: 40px;
 	}
 	.service,
 	.employee {
@@ -1783,9 +1900,9 @@ Responsive
 /* Small menu */
 .menu-toggle {
 	display: none;
-	background-color: #ebebeb;
+	background-color: #f4f2ed;
 	color: #444;
-	margin: 40px 0;
+	margin: 25px 0 !important;
 	box-shadow: none;
 	float: right;
 }
@@ -1801,7 +1918,7 @@ Responsive
 		float: none;
 	}
 	.site-title {
-		font-size: 30px;
+		font-size: 35px;
 	}
 }
 @media screen and (max-width: 991px) {
@@ -1866,7 +1983,6 @@ Responsive
 		background-size: auto !important;
 	}
 	.widget-title:after {
-		display: none;
 	}
 }
 
